--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -3,8 +3,7 @@ FROM alpine:latest
 EXPOSE 8082
 EXPOSE 8445
 
-RUN mkdir -p /opt/aquasec
-ADD postee /opt/aquasec/
-WORKDIR /opt/aquasec/
-CMD ["/opt/aquasec/postee"]
+COPY postee /postee
+
+CMD ["/postee"]
 
