--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -43,8 +43,7 @@ dockers:
   - dockerfile: Dockerfile.release
     use_buildx: true
     image_templates:
-      - "docker.io/aquasec/postee:{{ .Version }}"
-      - "public.ecr.aws/aquasecurity/postee:{{ .Version }}"
+      - "docker.io/dramf/postee:{{ .Version }}"
     ids:
       - postee
     build_flag_templates:
