--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -77,6 +77,11 @@ spec:
               mountPath: /rego
             - name: postee-db
               mountPath: /server/database
+          livenessProbe:
+            httpGet:
+              path: /ping
+              port: 8082
+            initialDelaySeconds: 30
           resources:
             limits:
               cpu: 500m
@@ -92,7 +97,4 @@ spec:
             name: rego-config
           name: rego-config
         - name: postee-db
-          emptyDir: {}
-          # In case to configure PVC - OPTIONAL
-          # persistentVolumeClaim:
-          #   claimName: postee-pvc
+          emptyDir: {} # For persistence storage use PVC and PV
