--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,8 +1,8 @@
-Name: tenant          #  the tenant name
-AquaServer: #  url of Aqua Server for links. E.g. https://myserver.aquasec.com
-Max_DB_Size: 1000     #  Max size of DB. MB. if empty then unlimited
-Delete_Old_Data: 10   #  delete data older than N day(s).  If empty then we do not delete.
-DbVerifyInterval: 1   #  hours. an Interval between tests of DB. Default: 1 hour
+name: tenant          #  the tenant name
+aqua-server: #  url of Aqua Server for links. E.g. https://myserver.aquasec.com
+max-db-size: 1000     #  Max size of DB. MB. if empty then unlimited
+delete-old-data: 10   #  delete data older than N day(s).  If empty then we do not delete.
+db-verify-interval: 1   #  hours. an Interval between tests of DB. Default: 1 hour
 
 routes:
 - name: route1      #  name must be unique
@@ -10,26 +10,26 @@ routes:
   outputs: [my-slack]  #  an integration output which will receive a scan or an audit event
   template: slack-template   #  a template for this route
   plugins:
-   Aggregate-Issues-Number:   #  a number of scans to aggregate into one ticket
-   Aggregate-Issues-Timeout:    #  number of seconds, minutes, hours to aggregate, maximum is 24 hours Xs or Xm or Xh)
-   Policy-Show-All: true # Optional. Open a ticket even if a ticket was opened for same image with same amount of vulnerabilities. Default is false.
+   aggregate-issues-number:   #  a number of scans to aggregate into one ticket
+   aggregate-issues-timeout:    #  number of seconds, minutes, hours to aggregate, maximum is 24 hours Xs or Xm or Xh)
+   policy-show-all: true # Optional. Open a ticket even if a ticket was opened for same image with same amount of vulnerabilities. Default is false.
 - name: route2      #  name must be unique
   outputs: [my-email]  #  an integration output which will receive a scan or an audit event
   template: rego-email   #  a template for this route
   plugins:
-   Aggregate-Issues-Number:   #  a number of scans to aggregate into one ticket
-   Aggregate-Issues-Timeout:  #  number of seconds, minutes, hours to aggregate, maximum is 24 hours Xs or Xm or Xh)
-   Policy-Show-All: true # Optional. Open a ticket even if a ticket was opened for same image with same amount of vulnerabilities. Default is false.
+   aggregate-issues-number:   #  a number of scans to aggregate into one ticket
+   aggregate-issues-timeout:  #  number of seconds, minutes, hours to aggregate, maximum is 24 hours Xs or Xm or Xh)
+   policy-show-all: true # Optional. Open a ticket even if a ticket was opened for same image with same amount of vulnerabilities. Default is false.
 
 templates:
 - name: slack-template         #  name must be unique
-  regopackage:  postee.slack      #  REGO package for a template
+  rego-package:  postee.vuls.slack      #  REGO package for a template
 - name: rego-email                #  name must be unique
-  regopackage:  postee.email      #  REGO package for a template
+  rego-package:  postee.vuls.html      #  REGO package for a template
 - name: legacy
-  legacyScanRenderer: html
+  legacy-scan-renderer: html
 - name: legacy-slack
-  legacyScanRenderer: slack
+  legacy-scan-renderer: slack
 - name: custom-email
   url: # url to custom rego file
 outputs:
@@ -39,8 +39,8 @@ outputs:
   url:   # Mandatory. E.g "https://johndoe.atlassian.net"
   user:  # Mandatory. E.g :johndoe@gmail.com"
   password:  # Mandatory. Specify Jira user API key
-  project_key:  # Mandatory. Specify the JIRA product key
-  tls_verify: false
+  project-key:  # Mandatory. Specify the JIRA product key
+  tls-verify: false
   board:  # Optional. Specify the Jira board name to open tickets on
   labels:  # Optional, specify array of labels to add to Ticket, for example: ["label1", "label2"]
   issuetype:  # Optional. Specifty the issue type to open (Bug, Task, etc.). Default is "Task"
@@ -60,7 +60,7 @@ outputs:
 - name: my-email-smtp-server
   type: email
   enable: true
-  UseMX: true
+  use-mx: true
   sender:  # Mandatory: The email address to use as a sender
   recipients: ["", ""]  # Mandatory: comma separated list of recipients
 
@@ -83,7 +83,7 @@ outputs:
   type: teams
   enable: true
   url: https://outlook.office.com/webhook/....   #  Webhook's url
-  Policy-OPA: ["/config/policy.rego"]
+  policy-opa: ["/config/policy.rego"]
 
 - name: webhook
   type: webhook
@@ -95,7 +95,7 @@ outputs:
   enable: true
   url: http://localhost:8088 # Mandatory. Url of a Splunk server
   token: <token> # Mandatory. a HTTP Event Collector Token
-  SizeLimit: 10000 # Optional. Maximum scan length, in bytes. Default: 10000
+  size-limit: 10000 # Optional. Maximum scan length, in bytes. Default: 10000
 
 - name: my-servicenow
   type: serviceNow
