--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,8 +1,16 @@
-FROM alpine:latest
-
+FROM alpine:3.13
+RUN apk update && apk add wget ca-certificates
 EXPOSE 8082
 EXPOSE 8445
-
-COPY postee /postee
-
-CMD ["/postee"]
+RUN mkdir /server
+RUN mkdir /server/database
+COPY bin /server/
+COPY rego-templates /server/rego-templates
+WORKDIR /server
+RUN chmod +x postee
+RUN addgroup -g 1099 webhook
+RUN adduser -D -g '' -G webhook -u 1099 webhook
+RUN chown -R webhook:webhook /server
+RUN chown -R webhook:webhook /config
+USER webhook
+ENTRYPOINT ["/server/postee"]
