--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -4,7 +4,7 @@ EXPOSE 8082
 EXPOSE 8445
 RUN mkdir /server
 RUN mkdir /server/database
-COPY bin /server/
+COPY postee /server/postee
 COPY rego-templates /server/rego-templates
 WORKDIR /server
 RUN chmod +x postee
