--- a/.github/workflows/publish-chart.yml
+++ b/.github/workflows/publish-chart.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches: [main]
     paths:
-      - 'deploy/helm/postee/**'
+      - 'deploy/helm/**'
+      - 'deploy/kubernetes/**'
     tags:
       - "v*"
   workflow_dispatch:
@@ -11,6 +12,9 @@ env:
   HELM_REP: helm-charts
   GH_OWNER: aquasecurity
   CHART_DIR: deploy/helm/postee
+  GO_VERSION: "1.16"
+  KIND_VERSION: "v0.11.1"
+  KIND_IMAGE: "kindest/node:v1.19.7@sha256:a70639454e97a4b733f9d9b67e12c01f6b0297449d5b9cbbef87473458e26dca"
 jobs:
   publish:
     runs-on: ubuntu-20.04
@@ -19,6 +23,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Setup Kubernetes cluster (KIND)
+        uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: ${{ env.KIND_VERSION }}
+          image: ${{ env.KIND_IMAGE }}
+      - name: Testing Kubernetes Postee manifest
+        run: |
+          kubectl create -f deploy/kubernetes
+          kubectl wait --for=condition=available \
+          --timeout=1m deploy/postee & ok_pid=$!
+          wait -n $ok_pid
+          exit $?
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
@@ -28,7 +44,7 @@ jobs:
           VERSION: 1.2.1
         run: |
           wget "https://github.com/helm/chart-releaser/releases/download/v${VERSION}/chart-releaser_${VERSION}_linux_amd64.tar.gz"
-          tar xzvf chart-releaser_${VERSION}_linux_amd64.tar.gz cr          
+          tar xzvf chart-releaser_${VERSION}_linux_amd64.tar.gz cr
       - name: Package helm chart
         run: |
           RELEASE=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g" | sed -e 's/^v//')
