chore: Makefile names and composer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
             - 8082:8082
         volumes:
             - bolt:/server/database
-            - config:/config
+            - config:/server
         environment:
-            - "POSTEE_CFG=/config/cfg.yaml"
+            - "POSTEE_CFG=/server/cfg.yaml"
             - "POSTEE_DEBUG=ON"
     posteeui:
         build:
@@ -20,9 +20,9 @@ services:
             - 8000:8000
         volumes:
             - bolt:/server/database
-            - config:/config
+            - config:/server
         environment:
-            - "POSTEE_UI_CFG=/config/cfg.yaml"
+            - "POSTEE_UI_CFG=/server/cfg.yaml"
             - "POSTEE_UI_PORT=8000"
             - "POSTEE_UI_UPDATE_URL=http://posteewebhook:8082"
 volumes:
