--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,6 +45,8 @@ dockers:
     image_templates:
       - "docker.io/aquasec/postee:{{ .Version }}"
       - "public.ecr.aws/aquasecurity/postee:{{ .Version }}"
+      - "docker.io/aquasec/postee:latest"
+      - "public.ecr.aws/aquasecurity/postee:latest"
     ids:
       - postee
     extra_files:
